--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -9,6 +9,10 @@
   @apply my-6;
 }
 
+.markdown a {
+  @apply text-blue-500 underline;
+}
+
 .markdown h2 {
   @apply mt-12 mb-4 text-3xl leading-snug;
 }
